--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -63,6 +63,7 @@
             android:layout_weight="1"
             android:backgroundTint="#F44336"
             android:text="Finish" />
+
     </LinearLayout>
 
     <EditText
@@ -78,6 +79,14 @@
         android:text="Ranking:"
         android:textSize="18sp"
         android:layout_marginTop="16dp"/>
+    <Button
+        android:id="@+id/resetButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Reset"
+        android:layout_margin="16dp"
+        android:layout_gravity="center" />
+
 
 
 </LinearLayout>
